--- a/client.ini
+++ b/client.ini
@@ -1,3 +1,3 @@
 [Config]
-#Server=http://localhost:8888/post
-Server=http://192.168.56.101:8888/post
+Server=http://localhost:8888/post
+#Server=http://192.168.56.101:8888/post
