--- a/client.ini
+++ b/client.ini
@@ -1,3 +1,4 @@
 [Config] #Please don't put slash at the end of the URL
 Server=http://localhost:8888
 #Server=http://192.168.56.101:8888
+#Server=http://ARCLB119:80
